cluster/apps/documents/mealie-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: mealie
    name: mealie-deployment
    namespace: documents
spec:
    replicas: 1
    serviceName: "mealie-service"
    selector:
        matchLabels:
            app: mealie
    template:
        metadata:
            labels:
                app: mealie
        spec:
            containers:
            - image: hkotel/mealie:omni-nightly
              imagePullPolicy: IfNotPresent
              name: mealie
              volumeMounts:
                - name: mealie-volume
                  mountPath: /app/data
              ports:
                - containerPort: 9000
            volumes:
              - name: mealie-volume
                persistentVolumeClaim:
                  claimName: mealie-data
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  namespace: documents
spec:
  ports:
    -
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: mealie
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: documents
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "mealie.${SECRET_LOCAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-service
                port:
                  number: 9000
