cluster/apps/documents/paperlessngx-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: paperless
    name: paperless-deployment
    namespace: documents
spec:
    replicas: 1
    serviceName: "paperless-service"
    selector:
        matchLabels:
            app: paperless
    template:
        metadata:
            labels:
                app: paperless
        spec:
            containers:
            - image: redis:7.0.0
              imagePullPolicy: IfNotPresent
              name: paperless-redis
              ports:
                - name: redis
                  containerPort: 6379
              livenessProbe:
               tcpSocket:
                port: redis
            - image: ghcr.io/paperless-ngx/paperless-ngx:1.7.1
              imagePullPolicy: IfNotPresent
              name: paperless
              volumeMounts:
                - name: paperless-data-volume
                  mountPath: /usr/src/paperless/data
                - name: paperless-media-volume
                  mountPath: /usr/src/paperless/media
                - name: paperless-export-volume
                  mountPath: /usr/src/paperless/export
                - name: paperless-consume-volume
                  mountPath: /usr/src/paperless/consume
              ports:
                - containerPort: 8000
            volumes:
              - name: paperless-volume
                persistentVolumeClaim:
                  claimName: paperless-data
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  namespace: documents
spec:
  ports:
    -
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: paperless
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-db-service
  namespace: documents
spec:
  ports:
    -
      port: 3306
  selector:
    app: paperless-db
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: documents
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "paperless.${SECRET_LOCAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-service
                port:
                  number: 8000
